--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@fontsource-variable/montserrat": "^5.2.5",
     "@tailwindcss/vite": "4.1.5",
     "astro": "5.7.10",
     "tailwindcss": "4.1.5"
