--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/vercel": "^8.1.4",
+    "@astrojs/check": "^0.9.4",
     "@fontsource-variable/montserrat": "^5.2.5",
     "@tailwindcss/vite": "4.1.5",
     "astro": "5.7.10",
-    "tailwindcss": "4.1.5"
+    "tailwindcss": "4.1.5",
+    "typescript": "^5.8.3"
   }
 }
